--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
-<center id="contact" class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue">
+<center id="contact" class="ph3 ph4-ns pv4 pv5-ns white bg-blue">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Want to work with us?</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Let’s make it happen.</h3>
   <div class="wow animated fadeInUp">
-    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
+    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
   </div>
 </center>
