--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,21 @@
-<section class="w-100 tc tl-ns ph3 ph4-ns pv5 pv6-ns bg-yellow">
-  <h1 class="f1 f-subheadline-m f-headline-l lh-title tracked-tight mv0" data-action="cursor">{{ site.title }}</h1>
-  <h2 class="f3 f2-ns mv0 lh-title">An independent design consultancy.</h2>
-  <nav class="wow animated fadeIn">
-    <ul class="list pa0 mv4 lh-copy">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#work" data-scroll>Work</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#services" data-scroll>Services</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#about" data-scroll>About</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#contact" data-scroll>Contact</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#news" data-scroll>News</a></li>
-    </ul>
-  </nav>
-  <address class="fs-normal wow animated fadeInUp">
-    <ul class="list pa0 mv4 lh-copy">
-      <li class="dib mr2"><a class="link underline-hover dark-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>hello@studiocraft.cc</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray" href="tel:13472211926"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(347) 221-1926</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Brooklyn, NY</a></li>
-    </ul>
-  </address>
-</section>
+<header class="w-100 vh-100 vh-75-ns dt ph3 ph4-ns pv5 pv6-ns bg-yellow">
+  <center class="dtc v-mid tl">
+    <h1 class="mh0 mv4 mv0-ns w3 h3 h-auto-ns w-auto-ns w-100-ns f1 f-headline f-subheadline-m lh-title tracked-tight ba bn-ns bw2 b--dark-gray" data-action="cursor">{{ site.title | truncate: 1, "" }}<span class="dn di-ns">{{ site.title | replace_first:'S','' }}</span></h1>
+    <h2 class="normal f3 f2-ns mv0 lh-title">An independent design studio &amp; consultancy.</h2>
+    <nav class="wow animated fadeIn">
+      <ul class="list pa0 mv4 lh-copy">
+        <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#work" data-scroll>Work</a></li>
+        <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#services" data-scroll>Services</a></li>
+        <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#about" data-scroll>About</a></li>
+        <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#contact" data-scroll>Contact</a></li>
+      </ul>
+    </nav>
+    <address class="fs-normal wow animated fadeInUp">
+      <ul class="list pa0 mv4 lh-copy">
+        <li class="dib mr2"><a class="link underline-hover dark-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>hello@studiocraft.cc</a></li>
+        <li class="dib mr2"><a class="link underline-hover dark-gray" href="tel:13472211926"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(347) 221-1926</a></li>
+        <li class="dib mr2"><a class="link underline-hover dark-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Brooklyn, NY</a></li>
+      </ul>
+    </address>
+  </center>
+</header>
