--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,8 +11,7 @@
           transform: translateX(-50%) translateY(-50%);
   background-position: center right;
   background-repeat: no-repeat;
-  background-size: cover;
-}
+  background-size: cover; }
 
 [data-action='cursor']::after {
   content: '_';
@@ -20,32 +19,25 @@
   line-height: inherit;
   -webkit-animation: blinking 1s infinite;
           animation: blinking 1s infinite;
-  position: absolute;
-}
+  position: absolute; }
 
 @-webkit-keyframes blinking {
   0% {
-    opacity: 0;
-  }
+    opacity: 0; }
   50% {
-    opacity: 1;
-  }
+    opacity: 1; }
   100% {
-    opacity: 0;
-  }
-}
+    opacity: 0; } }
 
 @keyframes blinking {
   0% {
-    opacity: 0;
-  }
+    opacity: 0; }
   50% {
-    opacity: 1;
-  }
+    opacity: 1; }
   100% {
-    opacity: 0;
-  }
-}
+    opacity: 0; } }
+.flickity-page-dots {
+  position: relative; }
 
 
 
