--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -10,7 +10,7 @@
           <input type="email" value="" name="EMAIL" class="required w5 w-two-thirds-m w-third-l email w-third-ns input-reset dib mv3 br-pill ba ph4 pv3 outline-0 b--light-silver" id="mce-EMAIL" placeholder="Email">
         </div>
       </div>
-      <input type="submit" class="input-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
+      <input type="submit" class="input-reset button-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
     </form>
   </div>
 </center>
