--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="overflow-hidden">
+<html lang="en" class="overflow-hidden tk-anonymous-pro">
   <head>
   {% include meta.html %}
   {% include css/css.html %}
   {% include js/js.html %}
   </head>
-  <body class="{{ page.slug }} w-100 tk-proxima-nova dark-gray">
+  <body class="{{ page.slug }} w-100 dark-gray">
     <div class="fixed absolute--fill bg-white z-9999" id="loaderOverlay">
       <span class="db right-0 ma3">
         <i class="fa fa-circle-o-notch fa-spin fa-lg fa-fw"></i>
