--- a/_includes/css/css.html
+++ b/_includes/css/css.html
@@ -1,6 +1,6 @@
 {% include css/vendor-css.html %}
 {% if site.github %}
-<link href="{{ site.baseurl }}dist/css/main.min.css" rel="stylesheet">
+<link href="{{ site.url }}/dist/css/main.min.css" rel="stylesheet">
 {% else %}
-<link href="{{ site.baseurl }}assets/css/app.css" rel="stylesheet">
+<link href="{{ site.url }}/assets/css/app.css" rel="stylesheet">
 {% endif %}
