--- a/_includes/location.html
+++ b/_includes/location.html
@@ -1,5 +1,5 @@
 <section class="dt-ns w-100 near-white bg-near-black" id="contact">
-  <div class="db dtc-ns w-100 w-40-ns ph3 ph4-ns pv4 pv5-ns">
+  <div class="db dtc-ns w-100 w-40-ns ph3 ph4-m ph6-l pv4 pv5-ns">
     <h2 class="f4 f3-ns mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">{{ site.title }}</h2>
     <address class="fs-normal mv4 wow animated fadeInUp">
       <label class="db mv1 tracked silver b ttu"><small>Contact</small></label>
