--- a/_includes/privacy-policy.html
+++ b/_includes/privacy-policy.html
@@ -1,4 +1,4 @@
-<section class="ph3 ph4-ns pv4 pv6-ns bg-near-black white">
+<section class="ph3 ph4-m ph6-l pv4 pv6-ns bg-near-black white">
   <article>
     <h3 class="f3 f2-ns lh-title tracked-tight wow animated fadeInDown">Contact</h3>
     <p class="lh-copy measure wow animated fadeIn">This Privacy Policy is effective as of <time>{{ site.time | date: "%B %d, %Y" }}</time> and if you have any questions about this Privacy Policy, please contact {{ site.title }}.</p>
