--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header class="w-100 vh-100 vh-75-ns dt ph3 ph4-ns pv5 pv6-ns bg-yellow">
+<header class="w-100 vh-100 vh-75-ns dt ph3 ph4-m ph6-l pv5 pv6-ns bg-yellow">
   <center class="dtc v-mid tl">
-    <h1 class="mh0 mv4 mv0-ns w3 h3 h-auto-ns w-auto-ns w-100-ns f1 f-headline f-subheadline-m lh-title tracked-tight ba bn-ns bw2 b--dark-gray" data-action="cursor">{{ site.title | truncate: 1, "" }}<span class="dn di-ns">{{ site.title | replace_first:'S','' }}</span></h1>
+    <h1 class="f1 f-subheadline-m f-headline-l lh-title tracked-tight" data-action="cursor">{{ site.title }}</h1>
     <h2 class="normal f3 f2-ns mv0 lh-title">An independent design studio &amp; consultancy.</h2>
     <nav class="wow animated fadeIn">
       <ul class="list pa0 mv4 lh-copy">
