--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,4 +1,4 @@
-<center class="ph3 ph4-ns pv4 pv5-ns near-black bg-near-white">
+<center class="ph3 ph4-m ph6-l pv4 pv5-ns near-black bg-near-white">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Enter your Email</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Design &amp; tech resources straight to your inbox.</h3>
   <div id="mc_response"></div>
