--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
+<header class="w-100 ph3 ph4-m ph6-l pv5 pv6-ns bg-yellow">
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv0">
       <li class="dib mr2"><i class="fa fa-fw fa-long-arrow-left"></i><a class="link underline-hover dark-gray b ttu" href="{{ site.url }}">{{ site.title }}</a></li>
