--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,9 +1,9 @@
 ---
 layout: page
 ---
-<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="about">
-  <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} {{ page.copy }}</p>
-  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} {{ page.copy }}</p>
+<section class="ph3 ph4-m ph6-l pv5 pv6-ns bg-near-white" id="about">
+  <p class="f4 f3-ns measure lh-copy wow animated fadeIn">{{ site.title }} is {{ site.about }}</p>
+  <p class="measure lh-copy wow animated fadeIn">{{ page.copy }}</p>
 </section>
 {{ content }}
 {% include contact.html %}
