--- a/_includes/location.html
+++ b/_includes/location.html
@@ -1,5 +1,5 @@
 <section class="dt-ns w-100 near-white bg-near-black" id="contact">
-  <div class="db dtc-ns w-100 w-40-ns ph3 ph4-m ph6-l pv4 pv5-ns">
+  <div class="db dtc-ns w-100 w-50-ns ph3 ph4-m ph6-l pv4 pv6-ns">
     <h2 class="f4 f3-ns mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">{{ site.title }}</h2>
     <address class="fs-normal mv4 wow animated fadeInUp">
       <label class="db mv1 tracked silver b ttu"><small>Contact</small></label>
@@ -9,7 +9,7 @@
         <li><a class="link underline-hover mid-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Brooklyn, NY</a></li>
       </ul>
     </address>
-    <address class="fs-normal mv4 wow animated fadeInUp">
+    <!-- <address class="fs-normal mv4 wow animated fadeInUp">
       <label class="db mv1 tracked silver b ttu"><small>Founder &amp; Creative Director</small></label>
       <ul class="list pa0 mv0 lh-copy">
         <li><span>Bryan Colosky</span></li>
@@ -22,9 +22,9 @@
         <li><span>Melda Kahraman</span></li>
         <li><a class="link underline-hover mid-gray" href="mailto:melda.kahraman@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>melda.kahraman@studiocraft.cc</a></li>
       </ul>
-    </address>
+    </address> -->
   </div>
-  <div class="dn dtc-ns w-100 w-60-ns relative">
+  <div class="dn dtc-ns w-100 w-50-ns relative">
     <div id="map" class="absolute absolute--fill wow animated fadeIn" style="background-color:transparent"></div>
   </div>
 </section>
