--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,5 +1,5 @@
 <center class="ph3 ph4-m ph6-l pv4 pv5-ns near-black bg-near-white">
-  <h2 class="f3 f2-m f1-l mv0 lh-title tracked-tight wow animated fadeInDown">Enter your Email</h2>
+  <h2 class="f3 f2-m f1-l mv0 lh-title tracked-tight wow animated fadeInDown">Subscribe &amp; Follow</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Design &amp; tech resources straight to your inbox.</h3>
   <div id="mc_response"></div>
   <div id="mc_embed_signup">
@@ -13,4 +13,5 @@
       <input type="submit" class="input-reset button-reset mv3 ph4 pv3 outline-0 mh2 br-pill ba bw1 b ttu b--dark-gray dark-gray bg-transparent dim" value="Subscribe">
     </form>
   </div>
+  {% include follow.html %}
 </center>
