--- a/_includes/follow.html
+++ b/_includes/follow.html
@@ -5,7 +5,7 @@
   <center class="ma4">
     {% for channel in site.data.social_media %}
     <span class="fa-stack fa-2x">
-      <i class="fa fa-circle fa-stack-2x dark-blue"></i>
+      <i class="fa fa-circle fa-stack-2x {{ channel.color }}"></i>
       <i class="fa fa-{{ channel.name }} fa-stack-1x fa-inverse"></i>
     </span>
     {% endfor %}
