--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="w-100 vh-100 vh-75-ns dt ph3 ph4-m ph6-l pv5 pv6-ns bg-yellow">
   <center class="dtc v-mid tl">
-    <h1 class="f1 f-subheadline-m f-headline-l lh-title tracked-tight" data-action="cursor">{{ site.title }}</h1>
+    <h1 class="ma0 f1 f-subheadline-m f-headline-l lh-title tracked-tight" data-action="cursor">{{ site.title }}</h1>
     <h2 class="normal f3 f2-ns mv0 lh-title">An independent design studio &amp; consultancy.</h2>
     <nav class="wow animated fadeIn">
       <ul class="list pa0 mv4 lh-copy">
